se toca todo para que funcione esta garcha